12/24/2013 v0.2.9

    * Fixed another unicode bug in diff-quality for pre-generated reports.

12/17/2013 v0.2.8

    * Fix a unicode bug in diff-quality

11/16/2013 v0.2.7

    * Update requirements to use Jinja 2.7.1
    * Remove sources list at top of report

10/9/2013 v0.2.6

    * Fix a bug in which unicode in source files would cause
      an exception.

10/2/2013 v0.2.5

    * Added option to consume pylint/pep8 reports instead of
      calling the tool directly.

9/23/2013 v0.2.4

    * Handle symbolic names in pylint output.

9/4/2013 v0.2.3

    * Fixed bug in parsing unicode filenames from git diff output

    * Coverage report now includes snippets from the original source file

9/1/13 v0.2.2

    * Fixed a bug that would cause multiple coverage reports to 
      always show 100% coverage.

    * Fixed bug when running diff cover during a merge conflict (Issue #41)

    * Added --no-ext to git diff command
    * Added Python 2.6 support

8/9/13 v0.2.1
	* Fix a bug in which function names and TODO: were not appearing in
	   `diff-quality` reports.

7/18/13 v0.2.0

    * Add support for code quality metrics (pep8 and pylint for now).
	Invoked via call to `diff-quality`

    * Add support for multiple coverage XML inputs.

    * Refactored diff report generator to use Jinja2 templates

6/28/13 v0.1.4

    * Fix bug in which adding then deleting lines would result in
      incorrect lines included in the diff report.

6/25/13 v0.1.3

    * Fix a bug in which plus signs in the hunk line would cause a parser error

6/17/13 v0.1.2

    * Fix bug in which lines around a change were included in the report

6/10/13 v0.1.1

    * Compare with origin/master instead of master
    * Includes staged and unstaged changes in report