@@ -1,3 +1,7 @@
+
+
+    * Specify compare branch in a command line arg
+
 12/24/2013 v0.2.9
 
     * Fixed another unicode bug in diff-quality for pre-generated reports.
